--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,11 +23,16 @@
     <string name="bank_ambank">AmBank</string>
     <string name="title_activity_home_questionaire">HomeQuestionaireActivity</string>
 
+    <!--Merchant List-->
+    <string name="merchant_ikea">Ikea</string>
+    <string name="merchant_harvey">Harvey Norman</string>
+
     <!--Document List-->
     <string name="document_ic">Identification Card</string>
     <string name="document_payslip">Payslip</string>
     <string name="document_epf">EPF</string>
     <string name="document_bank_statement">Bank Statement</string>
+
     <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
@@ -42,4 +47,7 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+
+    <string name="title_activity_furniture_loans">Furniture</string>
+
 </resources>
